@@ -1,3 +1,8 @@
+2018-07-23  Araki Ken  <arakiken@users.sf.net>
+
+	* c_sixel.c: Sixel graphics extension which "sayaka --ormode on" outputs
+	  is supported. (Disabled by default. #define SIXEL_ORMODE enables it.)
+
 2018-07-22  Araki Ken  <arakiken@users.sf.net>
 
 	* c_sixel.c: Sixel graphics extension and option1 of
